# SerialMonitor

./: LICENSE  README.md  README_RU.md  pyproject.toml  requirements.txt
example/: temp_n_hum_values.txt  temp_n_num.json
serial_monitor/: app.py  config.py  formatters.py  parsers.py  serial_io.py  settings_model.py
serial_monitor/controllers/: output_controller.py  parser_controller.py  serial_controller.py
serial_monitor/ui/: main_window.py  plot_tab.py  settings_window.py  simple_plot.py
tests/: test_app.py  test_config.py  test_serial.py  test_settings.py
